<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/Hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hi_what_do_your"
        android:textSize="30sp"
        android:layout_centerHorizontal="false"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="40dp"
        />

    <TextView
        android:id="@+id/friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_below="@id/Hi"
        android:layout_marginLeft="40dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/friends_call_you"
        />

      <EditText
         style="@style/EditorFieldStyle"
          android:id="@+id/edit_name"
          android:hint="@string/name"
          android:inputType="text"
          android:layout_below="@id/friends"
          android:layout_marginTop="50dp"
          android:layout_centerHorizontal="true"
          android:layout_marginLeft="80dp"
          />
    <Button
        android:id="@+id/continueToHome"
        style="@style/ContinueWithGoogle"
        android:background="@drawable/transparent_button"
        android:text="@string/continueOn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="320dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"

        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/back_button_in_Registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="bottom|right"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"

        app:icon="@drawable/ic_baseline_arrow_back_ios_24"

        android:backgroundTint="@color/cardview_light_background"
        />


</RelativeLayout>